--- a/documentation/advancedDoc/advancedDoc.tex
+++ b/documentation/advancedDoc/advancedDoc.tex
@@ -20,7 +20,7 @@
 
 This chapter contains documentation on advanced features for readers that would like to have a deep look in \Dynawo-algorithms. It will explain:
 \begin{itemize}
-\item \Dynawo code organization (\ref{Dynawo_Algorithms_Advanced_Documentation_Code_Organization})
+\item \Dynawo-algorithms code organization (\ref{Dynawo_Algorithms_Advanced_Documentation_Code_Organization})
 \end{itemize}
 
 \section{Code organization}
@@ -59,7 +59,7 @@ The source code is divided into different subdirectories corresponding to the di
 \begin{itemize}
 \item the API directory contains the code related to all the Input/Output
 files;
-\item the Common directory contains all the code dealing with common feature and methods as well as the dictionaries for logs;
+\item the Common directory contains all the code dealing with common features and methods as well as the dictionaries for logs;
 \item the Launcher folder contains the main algorithms;
 \end{itemize}
 
