--- a/documentation/introduction/introduction.tex
+++ b/documentation/introduction/introduction.tex
@@ -29,8 +29,8 @@ It provides the following possibilities:
 \begin{itemize}
   \item \textbf{Unitary simulations}: simulations of one or several power systems described in a \textbf{.jobs} file 
   (see \href{https://github.com/dynawo/dynawo/releases/download/v1.3.0/DynawoDocumentation.pdf}{\underline{\Dynawo documentation}});
-  \item \textbf{Systematic analysis}: simulations of a same base power system subject to different N-k events to assess the global stability;
-  \item \textbf{Margin calculation}: simulations of a same base power system with a load variation and subject to different N-k events to compute 
+  \item \textbf{Systematic analysis}: simulations of a same base power system subject to different events to assess the global stability;
+  \item \textbf{Margin calculation}: simulations of a same base power system with a load variation and subject to different events to compute 
   the maximum load increase in a specific region before the voltage collapses;
   \item \textbf{Load increase}: simulation of a single load variation.
 \end{itemize}
