#276 update links in documentation following release v1.3.1 closes #276

--- a/documentation/introduction/introduction.tex
+++ b/documentation/introduction/introduction.tex
@@ -28,7 +28,7 @@ It can be used with any tool of the \Dynawo toolsuite (DynaFlow, DynaWaltz, Dyna
 It provides the following possibilities:
 \begin{itemize}
   \item \textbf{Unitary simulations}: simulations of one or several power systems described in a \textbf{.jobs} file 
-  (see \href{https://github.com/dynawo/dynawo/releases/download/v1.3.0/DynawoDocumentation.pdf}{\underline{\Dynawo documentation}});
+  (see \href{https://github.com/dynawo/dynawo-algorithms/releases/download/v1.3.1/DynawoAlgorithmsDocumentation.pdf}{\underline{\Dynawo documentation}});
   \item \textbf{Systematic analysis}: simulations of a same base power system subject to different events to assess the global stability;
   \item \textbf{Margin calculation}: simulations of a same base power system with a load variation and subject to different events to compute 
   the maximum load increase in a specific region before the voltage collapses;
@@ -39,6 +39,9 @@ It provides the following possibilities:
 The source code is hosted into a \href{https://github.com/dynawo/dynawo-algorithms} {\underline{GitHub repository}}. \\
 
 \section{Changes from previous versions}
+
+\subsection{Changes from v1.3.1}
+Minor fixes.
 
 \subsection{Changes from v1.3.0}
 First release.
