--- a/documentation/installation/installation.tex
+++ b/documentation/installation/installation.tex
@@ -24,7 +24,14 @@ This project adds additional features to the \href{https://github.com/dynawo/dyn
 
 \section{\Dynawo-algorithms binaries distribution}
 
-\Dynawo-algorithms release is available on Github : \href{https://github.com/dynawo/dynawo-algorithms/releases/download/v1.4.1/DynawoAlgorithms_Linux_v1.4.1.zip}{Linux release}.
+To start testing \Dynawo-algorithms you can use binary releases on Github:
+\begin{itemize}
+\item
+  \href{https://github.com/dynawo/dynawo-algorithms/releases/download/v1.5.0/DynawoAlgorithms_Linux_v1.5.0.zip}{Linux}
+\item
+  \href{https://github.com/dynawo/dynawo-algorithms/releases/download/v1.5.0/DynawoAlgorithms_Windows_v1.5.0.zip}{Windows}
+\end{itemize}
+
 
 The packages required to use the distribution are the same as \Dynawo.
 
